--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
   "dependencies": {
-    "react-router-dom": "^7.0.1"
+    "chart.js": "^4.4.8",
+    "firebase": "^11.3.1",
+    "moment": "^2.30.1",
+    "react-chartjs-2": "^5.3.0",
+    "react-router-dom": "^6.29.0"
   }
 }
